fix: hidden overflow in Error-Pages
The AccessDenied and NotFound Pages had overflow hidden in small screens.
Also the fixed font size for 404 and 403 text did not fit well for mobile.
- Added page height and overflows BS classes to fix hidden overflow
- Added custom css to improve the font size, with fixed size for bit
  screens and "vw" units for tablets and mobile.

--- a/src/pages/AccessDenied/_access-denied.scss
+++ b/src/pages/AccessDenied/_access-denied.scss
@@ -1,4 +1,4 @@
-.not-found__ {
+.access-denied__ {
   &alert {
     font-size: 20vw;
     @media screen and (min-width: 768px) {
